# Defence-Tooling

RedBaron2/: .gitignore  .gitmodules  Cargo.toml  README.md  buildvars.sh  flake.nix  libbpf.tar.xz  yara_linux.tar.xz
RedBaron2/.github/workflows/: build.yml  e2e-tests.yml  vendor.yml
RedBaron2/asciicastlib/: Cargo.toml
RedBaron2/asciicastlib/src/: lib.rs
RedBaron2/bsm/: Cargo.toml
RedBaron2/bsm/src/: lib.rs
RedBaron2/decrypt-cast/: Cargo.toml
RedBaron2/decrypt-cast/src/: main.rs
RedBaron2/flying-ace-engine/: Cargo.toml
RedBaron2/flying-ace-engine/benches/: engine.rs  retest-changed.sh
RedBaron2/flying-ace-engine/rules/elastic/: elastic_apt_hook_persistence.yaml  elastic_aws_creds_container_search.yaml  elastic_bpf_persistence.yaml  elastic_bpftool_tampering.yaml  elastic_chisel_tunneling.yaml  elastic_container_management_binary.yaml  elastic_cups_foomatic_rip_shell.yaml  elastic_docker_socket_discovery.yaml  elastic_earthworm_tunneling.yaml  elastic_gdb_process_injection.yaml  elastic_ip_forwarding_enable.yaml  elastic_k8s_service_account_access.yaml  elastic_kernel_module_load.yaml  elastic_kubeconfig_discovery.yaml  elastic_kubectl_api_direct_request.yaml  elastic_kubectl_impersonation.yaml  elastic_motd_persistence.yaml  elastic_overlayfs_priv_esc.yaml  elastic_pam_module_creation.yaml  elastic_pkexec_priv_esc.yaml  elastic_proot_container_escape.yaml  elastic_proxychains_activity.yaml  elastic_rc_local_persistence.yaml  elastic_ssh_x11_forwarding.yaml  elastic_sudo_ld_preload.yaml  elastic_telegram_api_exfil.yaml
RedBaron2/flying-ace-engine/rules/original/: curl_pipe_bash.yaml  curl_wget_download.yaml  dd_usage.yaml  histfile_removal.yaml  interact_lkm.yaml  linux_hack_tool_frameworks.yaml  linux_hack_tool_recon.yaml  linux_hack_tool_scripts.yaml  process_from_mem.yaml  python_revshell.yaml  rm_rf_nopreserve.yaml
RedBaron2/flying-ace-engine/rules/rta/: rta_awk_inet_tcp_shell.yaml  rta_awk_system_shell.yaml  rta_background_shell.yaml  rta_base64_decode_to_exec.yaml  rta_bash_dev_tcp_reverse_shell.yaml  rta_capabilities_abuse.yaml  rta_curl_telnet_reverse_shell.yaml  rta_data_staging_split.yaml  rta_dd_proc_mem_injection.yaml  rta_dns_exfiltration.yaml  rta_docker_container_escape.yaml  rta_ed_shell_escape.yaml  rta_find_exec_shell.yaml  rta_gdb_process_attach_injection.yaml  rta_history_tampering.yaml  rta_history_tampering_enhanced.yaml  rta_journalctl_log_deletion.yaml  rta_ld_preload_hijack.yaml  rta_ldap_group_enumeration.yaml  rta_ldap_user_enumeration.yaml  rta_less_more_shell_escape.yaml  rta_log_overwrite_devnull.yaml  rta_lua_socket_reverse_shell.yaml  rta_lxd_container_escape.yaml  rta_man_shell_escape.yaml  rta_mimipenguin.yaml  rta_mkfifo_reverse_shell_chain.yaml  rta_nodejs_reverse_shell.yaml  rta_od_octal_dump_sensitive_files.yaml  rta_openssl_reverse_shell.yaml  rta_packed_binary_exec.yaml  rta_packet_capture.yaml  rta_passwd_change.yaml  rta_perl_socket_reverse_shell.yaml  rta_php_cli_reverse_shell.yaml  rta_ptrace_process_injection.yaml  rta_rc_script_persistence.yaml  rta_ruby_socket_reverse_shell.yaml  rta_sed_shell_execution.yaml  rta_shred_log_files.yaml  (+11 more)
RedBaron2/flying-ace-engine/rules/sigma/: sigma_apt_shell_execution.yaml  sigma_at_command.yaml  sigma_auditctl_clear_rules.yaml  sigma_av_kaspersky_av_disabled.yaml  sigma_awk_shell_spawn.yaml  sigma_base64_decode.yaml  sigma_base64_execution.yaml  sigma_base64_shebang_cli.yaml  sigma_bash_interactive_shell.yaml  sigma_bpf_kprob_tracing_enabled.yaml  sigma_bpftrace_unsafe_option_usage.yaml  sigma_cap_setgid.yaml  sigma_cap_setuid.yaml  sigma_capa_discovery.yaml  sigma_capsh_shell_invocation.yaml  sigma_chattr_immutable_removal.yaml  sigma_chroot_execution.yaml  sigma_clear_logs.yaml  sigma_clear_syslog.yaml  sigma_clipboard_collection.yaml  sigma_cp_passwd_or_shadow_tmp.yaml  sigma_crontab_enumeration.yaml  sigma_crontab_removal.yaml  sigma_curl_usage.yaml  sigma_curl_wget_exec_tmp.yaml  sigma_dd_file_overwrite.yaml  sigma_dd_process_injection.yaml  sigma_disable_ufw.yaml  sigma_doas_execution.yaml  sigma_env_shell_invocation.yaml  sigma_esxcli_network_discovery.yaml  sigma_esxcli_permission_change_admin.yaml  sigma_esxcli_storage_discovery.yaml  sigma_esxcli_syslog_config_change.yaml  sigma_esxcli_system_discovery.yaml  sigma_esxcli_user_account_creation.yaml  sigma_esxcli_vm_discovery.yaml  sigma_esxcli_vm_kill.yaml  sigma_esxcli_vsan_discovery.yaml  sigma_file_deletion.yaml  (+76 more)
RedBaron2/flying-ace-engine/rules/unit_tests/: unit_test_1.yaml  unit_test_4.yaml  unit_test_6.yaml  unit_test_7.yaml
RedBaron2/flying-ace-engine/src/: lib.rs  rule_fixtures.rs
RedBaron2/flying-ace-engine/tests/: engine.rs
RedBaron2/rb2-auditd/: Cargo.toml
RedBaron2/rb2-auditd/src/: daemon.rs  dedupe.rs  lib.rs  netlink.rs  parser.rs  rules.rs  types.rs
RedBaron2/rb2-ebpf/: Makefile  Makefile.vars  auth_pam.bpf.c  auth_pam.h  firewall_events.bpf.c  https_capture.bpf.c  network_capture.bpf.c  nfq_firewall.bpf.c  process_start.bpf.c  tty_view.bpf.c
RedBaron2/rb2-freebsd/: Cargo.toml  build.rs
RedBaron2/rb2-freebsd/src/: firewall.rs  main.rs  service.rs  sysctl.rs  yara_scan.rs
RedBaron2/rb2-freebsd/src/bsm/: mod.rs
RedBaron2/rb2-ml/: Cargo.toml
RedBaron2/rb2-ml/src/: config.rs  lib.rs  model.rs  stats.rs
RedBaron2/rb2-userspace/: Cargo.toml  build.rs
RedBaron2/rb2-userspace/src/: lib.rs  main.rs
RedBaron2/rb2-userspace/src/auth/: ebpf.rs  mod.rs
RedBaron2/rb2-userspace/src/btf/: fetch_btf.rs  mod.rs
RedBaron2/rb2-userspace/src/config/: dropper.rs  logger.rs  mod.rs  systemd.rs  yaml.rs
RedBaron2/rb2-userspace/src/file_integrity/: mod.rs
RedBaron2/rb2-userspace/src/firewall/: dispatcher.rs  mod.rs  sockets.rs
RedBaron2/rb2-userspace/src/ingest/: filter.rs  mod.rs  openobserve.rs  queue.rs  reader.rs  splunk.rs  traces.rs
RedBaron2/rb2-userspace/src/integrity/: apk.rs  dpkg.rs  mod.rs  pacman.rs  rpm.rs
RedBaron2/rb2-userspace/src/tty/: mod.rs  (+7 more)
RedBaron2/rb2-web-gui/: Dockerfile  README.md  build.sh  docker-compose.yml  go.mod  vendor.sh  vendor.tar.xz  vendored-build.sh
(+48 files in other folders)
