[workspace]
resolver = "2"
members = [
  "asciicastlib",
  "bsm",
  "decrypt-cast",
  "flying-ace-engine",
  "rb2-auditd",
  "rb2-freebsd",
  "rb2-ml",
  "rb2-userspace",
]
default-members = [
  "asciicastlib",
  "decrypt-cast",
  "flying-ace-engine",
  "rb2-auditd",
  "rb2-ml",
  "rb2-userspace",
]

[workspace.package]
version = "1.3.0"
edition = "2024"

[workspace.dependencies]
asciicastlib = { path = "asciicastlib" }
flying-ace-engine = { path = "flying-ace-engine" }
rb2-auditd = { path = "rb2-auditd" }
rb2-ml     = { path = "rb2-ml" }

age        = { version = "0.11.2", features = ["ssh"] }
anyhow     = { version = "1.0.102" }
async-trait = { version = "0.1.89" }
aya        = { version = "0.13.1", features = ["async_tokio"] }
aya-obj    = { version = "0.2.1" }
base64     = { version = "0.22.1" }
bytes      = { version = "1.11.1" }
chrono     = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
criterion  = { version = "0.8" }
flate2     = { version = "1.1.9" }
fluke-hpack = { version = "0.3.1" }
iptables   = { version = "0.6.0" }
libc       = { version = "0.2.184" }
log        = { version = "0.4.29", features = ["release_max_level_info"] }
log4rs     = { version = "1.4.0", default-features = false, features = [
  "console_appender",
  "rolling_file_appender",
  "compound_policy",
  "size_trigger",
  "fixed_window_roller",
  "pattern_encoder",
  "threshold_filter",
  "gzip",
  "background_rotation",
] }
lru        = { version = "0.16.3", default-features = false }
md5        = { version = "0.8.0" }
nfq        = { version = "0.2.5" }
nix        = { version = "0.30.1", features = [
  "fanotify",
  "fs",
  "hostname",
  "poll",
  "process",
  "resource",
  "signal",
  "time",
  "uio",
  "user",
] }
regex      = { version = "1.12.3", default-features = false, features = ["unicode-perl"] }
reqwest    = { version = "0.13.2", default-features = false, features = ["rustls", "system-proxy"] }
rhai       = { version = "1.24.0", features = [
  "no_custom_syntax",
  "no_float",
  "no_module",
  "no_position",
  "sync",
] }
fastrace   = { version = "0.7.17" }
rusty-s3   = { version = "0.8.1" }
sd-notify  = { version = "0.5.0" }
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_with = { version = "3.18.0" }
sha1       = { version = "0.10.6" }
sha2       = { version = "0.10.9" }
shell-words = { version = "1.1.1" }
sqlx       = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
sysinfo    = { version = "0.37.2", default-features = false, features = ["system", "network", "user"] }
tar        = { version = "0.4.45", default-features = false }
tokio      = { version = "1.51.1", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
uuid        = { version = "1.23.0", features = ["v4"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
lzma-rs     = { version = "0.3" }
xz2         = { version = "0.1.7" }
yaml-rust2  = { version = "0.11.0", default-features = false }
yaml_serde  = { version = "0.10.4" }
yara-x      = { version = "1.14.0", default-features = false, features = ["fast-regexp", "inventory", "constant-folding"] }

[profile.release]
strip = true
#lto = "thin"
codegen-units = 1
panic = "abort"
debug = 0
